Adding media partners

--- a/views/index.jade
+++ b/views/index.jade
@@ -33,9 +33,11 @@ block content
     .col-sm-12
       section.neck-step-2
         p.text-center
-          a.button(href="https://goo.gl/bHiWIr", target="_blank") Pre-inscribirse 
-        p.text-center(style="padding-bottom: 20px; margin-bottom:20px")
-          span(style="color:#fff") < podés pre-inscribirte incluso si todavia no tenes equipo >
+          a.button(href="https://goo.gl/bHiWIr", target="_blank", style="margin-bottom:5px;") Pre-inscribirse 
+        p.text-center(style="padding-bottom: 60px; margin-bottom:20px; font-size:14px;")
+          span(style="color:#fff")
+            i.ion-ios-information
+            i  Podés pre-inscribirte incluso si todavia no tenes equipo
         .fc-con.animated(flipclock)
         // Botones redes sociales
         #fb-root
@@ -375,9 +377,12 @@ block content
             a(href="http://www.tecso.coop/", target="_blank")
               img(src="./auspiciantes/tecso.png")
           li
+            a(href="http://www.coasa.com.ar/", target="_blank")
+              img(src="./auspiciantes/coa.jpg", style="height: 90px")
+        ul.list-inline
+          li
             a(href="http://www.erapm.com.ar/", target="_blank")
               img(src="./auspiciantes/era.png")
-        ul.list-inline
           li
             a(href="http://www.kodear.net/", target="_blank")
               img(src="./auspiciantes/kodear.png")
@@ -413,6 +418,9 @@ block content
           li
             a(href="http://nodocios.com.ar/", target="_blank")
               img(src="./mediapartners/nodocios.png")
+          li
+            a(href="http://www.segu-info.com.ar/", target="_blank")
+              img(src="./mediapartners/segu-info.jpg")
         h2.hide Sponsors
         ul.hide.list-inline
         h2.hide Premios
