--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block content
           | 
           br
           | La primer hackathon para programadores  
-          i fullstack
+          i con espíritu emprendedor
         p.sub-line.text-center
           i.fa.fa-calendar.fa-fw
           | 13, 14 y 15 de Noviembre
@@ -21,7 +21,7 @@ block content
             i.fa.fa-map-marker.fa-fw
             | Maipú 835, Polo Tecnológico Rosario
         p.sub-line.text-center
-          a(href="##premios").animated.bounce.infinite 
+          a(href="##premios").animated.tada.infinite 
             i.ion-trophy
             |  Premios 
           span(style="padding: 0 10px 0 5px; margin: 0") ·
