--- a/views/index.jade
+++ b/views/index.jade
@@ -371,11 +371,14 @@ block content
               img(src="./auspiciantes/transdatos.jpg")
         ul.list-inline
           li
-            a(href="http://killabunnies.com.ar/", target="_blank")
-              img(src="./auspiciantes/killabunnies.png")
+            a(href="http://strongloop.com/", target="_blank")
+              img(src="./auspiciantes/strongloop_logo_stacked.png", style="height: 130px;")
           li
             a(href="http://www.tecso.coop/", target="_blank")
               img(src="./auspiciantes/tecso.png")
+          li
+            a(href="http://killabunnies.com.ar/", target="_blank")
+              img(src="./auspiciantes/killabunnies.png")
           li
             a(href="http://www.coasa.com.ar/", target="_blank")
               img(src="./auspiciantes/coa.jpg", style="height: 90px")
