--- a/views/index.jade
+++ b/views/index.jade
@@ -205,6 +205,17 @@ block content
                 a(href="https://twitter.com/alejandromotta", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
           li
+            img.img-circle.img-responsive.center-block(src="img/jurados/mmuzzio-foto.png")
+            p.label-n Marcelo Muzzio
+            p.label-brand Director ejecutivo en Assist S.A. 
+            ul.list-inline
+              li  
+                a(href="https://ar.linkedin.com/pub/marcelo-muzzio/11/888/98b", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              li
+                a(href="http://twitter.com/MarceloMuzzio", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
+          //li
             img.img-circle.img-responsive.center-block(src="img/jurados/yibarra-foto.jpg")
             p.label-n Yanina Ibarra
             p.label-brand Principal · Texts and Contexts 
