Adding more sponsors

--- a/views/index.jade
+++ b/views/index.jade
@@ -398,6 +398,9 @@ block content
             a(href="http://www.erapm.com.ar/", target="_blank")
               img(src="./auspiciantes/era.png")
           li
+            a(href="http://www.ibm.com/ar-es/", target="_blank")
+              img(src="./auspiciantes/ibm.png")
+          li
             a(href="http://www.kodear.net/", target="_blank")
               img(src="./auspiciantes/kodear.png")
         h2 Institucionales
@@ -408,6 +411,9 @@ block content
           li
             a(href="http://www.santafe.gov.ar/", target="_blank")
               img(src="./institucionales/santafe.jpg")
+          li
+            a(href="http://www.endeavor.org.ar/experiencia-endeavor-rosario-2015/", target="_blank")
+              img(src="./institucionales/endeavor-rosario.png")
           li
             a(href="http://www.moverse.org/", target="_blank")
               img(src="./institucionales/moverse.png")
@@ -435,6 +441,9 @@ block content
           li
             a(href="http://www.segu-info.com.ar/", target="_blank")
               img(src="./mediapartners/segu-info.jpg")
+          li
+            a(href="http://porven.com.ar/", target="_blank", style="margin:20px 0")
+              img(src="./mediapartners/porven.png", style="margin: 20px 0")
         h2.hide Sponsors
         ul.hide.list-inline
         h2.hide Premios
