--- a/views/index.jade
+++ b/views/index.jade
@@ -403,6 +403,9 @@ block content
           li
             a(href="http://www.kodear.net/", target="_blank")
               img(src="./auspiciantes/kodear.png")
+          li
+            a(href="http://www.interlinksrl.com.ar/", target="_blank")
+              img(src="./auspiciantes/interlink.jpg")
         h2 Institucionales
         ul.list-inline
           li
