--- a/views/index.jade
+++ b/views/index.jade
@@ -406,6 +406,9 @@ block content
           li
             a(href="http://www.interlinksrl.com.ar/", target="_blank")
               img(src="./auspiciantes/interlink.jpg")
+          li
+            a(href="https://servoy.com/", target="_blank")
+              img(src="./auspiciantes/servoy.png")
         h2 Institucionales
         ul.list-inline
           li
