Agregando fundación Sadosky

--- a/views/index.jade
+++ b/views/index.jade
@@ -433,6 +433,16 @@ block content
           li
             a(href="http://www.frro.utn.edu.ar/", target="_blank")
               img(src="./institucionales/utnrosario.jpg")
+        ul.list-inline
+          li
+            a(href="http://www.fundacionsadosky.org.ar/", target="_blank")
+              img(src="./institucionales/logo-fs.png")
+          //li
+            a(href="http://www.pmi.org.ar/", target="_blank")
+              img(src="./institucionales/pmi.png")
+          //li
+            a(href="http://www.frro.utn.edu.ar/", target="_blank")
+              img(src="./institucionales/utnrosario.jpg")
         h2 Media Partners
         ul.list-inline
           li
