agregando el boton de faqs

--- a/views/index.jade
+++ b/views/index.jade
@@ -61,6 +61,12 @@ block content
                 script.
                   !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
         // Fin botones redes sociales
+        p.text-center
+          a.button(href="https://goo.gl/J3RfUq", target="_blank", style="margin-bottom:5px;") Preguntas frecuentes 
+        p.text-center(style="padding-bottom: 30px; margin-bottom:20px; font-size:14px;")
+          span(style="color:#fff")
+            i.ion-ios-information
+            i ¿Querés participar y tenés dudas?
   .arrow-separator.arrow-theme
   .row.color-2
     .col-sm-10.col-sm-offset-1
