--- a/views/index.jade
+++ b/views/index.jade
@@ -397,12 +397,15 @@ block content
             a(href="http://www.tecso.coop/", target="_blank")
               img(src="./auspiciantes/tecso.png")
           li
+            a(href="http://www.alphasocialmarketing.com/", target="_blank")
+              img(src="./auspiciantes/alpha.png")
+          li
             a(href="http://killabunnies.com.ar/", target="_blank")
               img(src="./auspiciantes/killabunnies.png")
+        ul.list-inline
           li
             a(href="http://www.coasa.com.ar/", target="_blank")
               img(src="./auspiciantes/coa.jpg", style="height: 90px")
-        ul.list-inline
           li
             a(href="http://www.erapm.com.ar/", target="_blank")
               img(src="./auspiciantes/era.png")
@@ -412,6 +415,13 @@ block content
           li
             a(href="http://www.kodear.net/", target="_blank")
               img(src="./auspiciantes/kodear.png")
+        ul.list-inline
+          li
+            a(href="http://www.rosariosistemas.com/", target="_blank")
+              img(src="./auspiciantes/logo-rs.png")
+          //li
+            a(href="http://www.rosariosistemas.com/", target="_blank")
+              img(src="./auspiciantes/cdng.png")
           li
             a(href="http://www.interlinksrl.com.ar/", target="_blank")
               img(src="./auspiciantes/interlink.jpg")
