--- a/views/index.jade
+++ b/views/index.jade
@@ -22,12 +22,15 @@ block content
             | Maipú 835, Polo Tecnológico Rosario
         p.sub-line.text-center
           a(href="##premios").animated.tada.infinite 
-            i.ion-trophy
-            |  Premios 
+            i.ion-bag.fa-fw
+            |  Más Premios!!
           span(style="padding: 0 10px 0 5px; margin: 0") ·
           a(href="##agenda")
             i.ion-ios-calendar-outline
             |  Agenda 
+        p.sub-line.text-center.animated.pulse.infinite(style="font-weight:bold;")
+          i.fa.ion-trophy.fa-fw
+          | PREMIO ESPECIAL DE $10.000 PESOS en efectivo para el EQUIPO GANADOR!
   .arrow-separator.arrow-white
   .row.color-1
     .col-sm-12
