--- a/views/index.jade
+++ b/views/index.jade
@@ -413,14 +413,17 @@ block content
             a(href="http://www.erapm.com.ar/", target="_blank")
               img(src="./auspiciantes/era.png")
           li
+            a(href="http://www.blcesg.com/web/es/index/", target="_blank")
+              img(src="./auspiciantes/blc.jpg")
+          li
             a(href="http://www.ibm.com/ar-es/", target="_blank")
               img(src="./auspiciantes/ibm.png")
+        ul.list-inline
           li
             a(href="http://www.kodear.net/", target="_blank")
               img(src="./auspiciantes/kodear.png")
-        ul.list-inline
           li
-            a(href="http://www.rosariosistemas.com/", target="_blank")
+            a(href="http://rosariosistemas.com/", target="_blank")
               img(src="./auspiciantes/logo-rs.png")
           //li
             a(href="http://www.rosariosistemas.com/", target="_blank")
@@ -456,9 +459,9 @@ block content
           li
             a(href="http://www.fundacionsadosky.org.ar/", target="_blank")
               img(src="./institucionales/logo-sadosky.png")
-          //li
-            a(href="http://www.pmi.org.ar/", target="_blank")
-              img(src="./institucionales/pmi.png")
+          li
+            a(href="http://www.fecia.unr.edu.ar/", target="_blank")
+              img(src="./institucionales/fceia.jpg")
           //li
             a(href="http://www.frro.utn.edu.ar/", target="_blank")
               img(src="./institucionales/utnrosario.jpg")
