--- a/views/index.jade
+++ b/views/index.jade
@@ -224,16 +224,16 @@ block content
               li
                 a(href="http://twitter.com/MarceloMuzzio", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
-          //li
-            img.img-circle.img-responsive.center-block(src="img/jurados/yibarra-foto.jpg")
-            p.label-n Yanina Ibarra
-            p.label-brand Principal · Texts and Contexts 
+          li
+            img.img-circle.img-responsive.center-block(src="img/jurados/mgonto.jpg")
+            p.label-n Martin Gontovnikas
+            p.label-brand Software Engineer
             ul.list-inline
               li  
-                a(href="https://ar.linkedin.com/in/yaninaibarra", target="_blank")
+                a(href="https://www.linkedin.com/in/mgonto", target="_blank")
                   i.fa.fa-linkedin-square.fa-2x
                 li.hide
-                  a(href="#", target="_blank")
+                  a(href="https://twitter.com/mgonto", target="_blank")
                     i.fa.fa-twitter-square.fa-2x
           //li
             img.img-circle.img-responsive.center-block(src="img/jurados/dichiazza-foto.jpg")
