--- a/views/index.jade
+++ b/views/index.jade
@@ -632,6 +632,30 @@ block content
                    p(style="text-align:center") Elegido por el jurado
                  td
                    h4.text-center
+                    
+                    <span style="font-size: 120px">$ 10.000.</span>   
+                   h4 Diez mil pesos en efectivo (Para el equipo).
+        .table-responsive.premios
+           table.table.table-condensed
+             thead
+               tr
+                 th 
+                 th
+                   p.text-center Premios
+             
+                   
+             tbody
+               tr
+                 td(style="width:240px;")
+                   h3
+                     i.ion-ribbon-b
+                     //|  Primer Puesto
+                   //p(style="text-align:center") Elegido por el jurado
+                 td
+                 
+                   
+                   
+                   h4.text-center
                     img(src="premios/chromecast.png", style="display:block")
                     span Chromecast (para cada uno de los integrantes):  
                    p 
