Fixing prizes table

--- a/views/index.jade
+++ b/views/index.jade
@@ -617,26 +617,7 @@ block content
           i.ion-trophy
           |  Premios 
         .table-responsive.premios
-           table.table.table-condensed
-             thead
-               tr
-                 th 
-                 th
-                   p.text-center Premios
-             tbody
-               tr
-                 td(style="width:240px;")
-                   h3
-                     i.ion-ribbon-b
-                     |  Primer Puesto
-                   p(style="text-align:center") Elegido por el jurado
-                 td
-                   h4.text-center
-                    
-                    <span style="font-size: 120px">$ 10.000.</span>   
-                   h4 Diez mil pesos en efectivo (Para el equipo).
-        .table-responsive.premios
-           table.table.table-condensed
+           table.table.table-condensed.table-bordered
              thead
                tr
                  th 
@@ -649,9 +630,11 @@ block content
                  td(style="width:240px;")
                    h3
                      i.ion-ribbon-b
-                     //|  Primer Puesto
-                   //p(style="text-align:center") Elegido por el jurado
+                     |  Primer Puesto
+                   p(style="text-align:center") Elegido por el jurado
                  td
+                   h3(style='font-size:60px; font-weight: bold;') $ 10.000.-
+                   h4 Diez mil pesos en efectivo (Para el equipo).
                  
                    
                    
@@ -670,7 +653,7 @@ block content
                     | Valor: $599 anual c/u - cortesía de Donweb
 
         .table-responsive.premios
-           table.table.table-condensed
+           table.table.table-condensed.table-bordered
              thead
                tr
                  th 
