--- a/views/index.jade
+++ b/views/index.jade
@@ -616,30 +616,33 @@ block content
         h2#premios 
           i.ion-trophy
           |  Premios 
+        style.
+          .table-responsive.premios * { text-align: center }
+          .table-responsive.premios th { background-color: #ccc; }
+          .table-responsive.premios td { background-color: #FAF9F9; }
+
         .table-responsive.premios
            table.table.table-condensed.table-bordered
              thead
                tr
-                 th 
-                 th
+                 th.text-center
                    p.text-center Premios
-             
-                   
-             tbody
-               tr
-                 td(style="width:240px;")
                    h3
                      i.ion-ribbon-b
                      |  Primer Puesto
                    p(style="text-align:center") Elegido por el jurado
-                 td
+             
+                   
+             tbody
+               tr
+                 td.text-center
                    h3(style='font-size:60px; font-weight: bold;') $ 10.000.-
                    h4 Diez mil pesos en efectivo (Para el equipo).
                  
                    
                    
                    h4.text-center
-                    img(src="premios/chromecast.png", style="display:block")
+                    img(src="premios/chromecast.png", style="display:block; margin: 0 auto;")
                     span Chromecast (para cada uno de los integrantes):  
                    p 
                     | Valor: $900 c/u
@@ -656,16 +659,14 @@ block content
            table.table.table-condensed.table-bordered
              thead
                tr
-                 th 
                  th
                    p.text-center Premios
-             tbody
-               tr
-                 td(style="width:240px;")
                    h3
                      i.ion-ribbon-a
                      |  Popularidad 
                    p(style="text-align:center") Elegido por votación
+             tbody
+               tr
                  td
                    h4 Cloud server pack 1 (para el equipo): 
                    p 
