cambiando lugar jurados

--- a/views/index.jade
+++ b/views/index.jade
@@ -213,28 +213,6 @@ block content
               li
                 a(href="https://twitter.com/alejandromotta", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
-          li
-            img.img-circle.img-responsive.center-block(src="img/jurados/mmuzzio-foto.png")
-            p.label-n Marcelo Muzzio
-            p.label-brand Director ejecutivo en Assist S.A. 
-            ul.list-inline
-              li  
-                a(href="https://ar.linkedin.com/pub/marcelo-muzzio/11/888/98b", target="_blank")
-                  i.fa.fa-linkedin-square.fa-2x
-              li
-                a(href="http://twitter.com/MarceloMuzzio", target="_blank")
-                  i.fa.fa-twitter-square.fa-2x
-          li
-            img.img-circle.img-responsive.center-block(src="img/jurados/mgonto.jpg")
-            p.label-n Martin Gontovnikas
-            p.label-brand Software Engineer
-            ul.list-inline
-              li  
-                a(href="https://www.linkedin.com/in/mgonto", target="_blank")
-                  i.fa.fa-linkedin-square.fa-2x
-                li.hide
-                  a(href="https://twitter.com/mgonto", target="_blank")
-                    i.fa.fa-twitter-square.fa-2x
           //li
             img.img-circle.img-responsive.center-block(src="img/jurados/dichiazza-foto.jpg")
             p.label-n Leandro Di Chiazza
@@ -256,6 +234,17 @@ block content
               li
                 a(href="https://twitter.com/cortezcristian", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
+          li
+            img.img-circle.img-responsive.center-block(src="img/jurados/mgonto.jpg")
+            p.label-n Martin Gontovnikas
+            p.label-brand Software Engineer · Auth0
+            ul.list-inline
+              li  
+                a(href="https://www.linkedin.com/in/mgonto", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+                li.hide
+                  a(href="https://twitter.com/mgonto", target="_blank")
+                    i.fa.fa-twitter-square.fa-2x
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/pkeilty-foto.jpg")
             p.label-n Patricio Keilty
@@ -329,6 +318,17 @@ block content
                   i.fa.fa-linkedin-square.fa-2x
               li
                 a(href="https://twitter.com/mariofigge", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
+          li
+            img.img-circle.img-responsive.center-block(src="img/jurados/mmuzzio-foto.png")
+            p.label-n Marcelo Muzzio
+            p.label-brand Director Ejecutivo · Assist S.A.
+            ul.list-inline
+              li  
+                a(href="https://ar.linkedin.com/pub/marcelo-muzzio/11/888/98b", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              li
+                a(href="http://twitter.com/MarceloMuzzio", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
         p.text-center
           a.button(href="mailto:emprendevs@gmail.com?subject=Postular Jurado", target="_blank") Postular Jurado
@@ -424,7 +424,7 @@ block content
               img(src="./auspiciantes/kodear.png")
           li
             a(href="http://rosariosistemas.com/", target="_blank")
-              img(src="./auspiciantes/logo-rs.png")
+              img(src="./auspiciantes/rs-logo.png")
           //li
             a(href="http://www.rosariosistemas.com/", target="_blank")
               img(src="./auspiciantes/cdng.png")
