Agregando Ezequiel Cardinali

--- a/views/index.jade
+++ b/views/index.jade
@@ -553,7 +553,8 @@ block content
                        .agenda-event
                          h3 
                            i.ion-ios-chatbubble
-                           |  Cloud Computing 
+                           |  Donweb CloudVPS
+                           span - Ezequiel Cardinali 
                    tr
                      td.agenda-time
                        | 16:00 - 16:30 HS
