Subiendo nuevos logos

--- a/views/index.jade
+++ b/views/index.jade
@@ -462,9 +462,9 @@ block content
           li
             a(href="http://www.fecia.unr.edu.ar/", target="_blank")
               img(src="./institucionales/fceia.jpg")
-          //li
-            a(href="http://www.frro.utn.edu.ar/", target="_blank")
-              img(src="./institucionales/utnrosario.jpg")
+          li
+            a(href="http://www.cessi.org.ar/", target="_blank")
+              img(src="./institucionales/cessi.jpg")
         h2 Media Partners
         ul.list-inline
           li
@@ -473,6 +473,9 @@ block content
           li
             a(href="https://www.facebook.com/inspirarte.tv", target="_blank")
               img(src="./mediapartners/inspirarte.png")
+          li
+            a(href="http://www.radiosi.com.ar/", target="_blank")
+              img(src="./mediapartners/logoradiosi.png")
           li
             a(href="http://nodocios.com.ar/", target="_blank")
               img(src="./mediapartners/nodocios.png")
