--- a/views/index.jade
+++ b/views/index.jade
@@ -423,7 +423,7 @@ block content
             a(href="http://www.kodear.net/", target="_blank")
               img(src="./auspiciantes/kodear.png")
           li
-            a(href="http://rosariosistemas.com/", target="_blank")
+            a(href="http://rosariosistemas.com/#inicio", target="_blank")
               img(src="./auspiciantes/rs-logo.png")
           //li
             a(href="http://www.rosariosistemas.com/", target="_blank")
