--- a/views/index.jade
+++ b/views/index.jade
@@ -465,6 +465,9 @@ block content
           li
             a(href="http://www.cessi.org.ar/", target="_blank")
               img(src="./institucionales/cessi.jpg")
+          li
+            a(href="http://adva.com.ar/", target="_blank")
+              img(src="./institucionales/adva.png")
         h2 Media Partners
         ul.list-inline
           li
