Subiendo Coding trainer

--- a/views/index.jade
+++ b/views/index.jade
@@ -425,9 +425,9 @@ block content
           li
             a(href="http://rosariosistemas.com/#inicio", target="_blank")
               img(src="./auspiciantes/rs-logo.png")
-          //li
-            a(href="http://www.rosariosistemas.com/", target="_blank")
-              img(src="./auspiciantes/cdng.png")
+          li
+            a(href="http://coding-trainer.jit.su/", target="_blank")
+              img(src="./auspiciantes/coding-logo.jpg")
           li
             a(href="http://www.interlinksrl.com.ar/", target="_blank")
               img(src="./auspiciantes/interlink.jpg")
