--- a/views/index.jade
+++ b/views/index.jade
@@ -563,7 +563,16 @@ block content
                            span - Ezequiel Cardinali 
                    tr
                      td.agenda-time
-                       | 16:00 - 16:30 HS
+                       | 16:30 - 17:00 HS
+                     td.agenda-event.speaker
+                       .agenda-event
+                         h3 
+                           i.ion-ios-chatbubble
+                           |  La economía de las APIs en la era de la computación cognitiva
+                           span - Gabriel Simona 
+                   tr
+                     td.agenda-time
+                       | 17:00 - 17:30 HS
                      td.agenda-event.speaker
                        .agenda-event
                          h3 
@@ -571,7 +580,7 @@ block content
                            |  Presentación de los equipos
                    tr
                      td.agenda-time
-                       | 16:30 - 18:00 HS
+                       | 18:00 - 18:30 HS
                      td.agenda-event.speaker
                        .agenda-event
                          h3 
