--- a/views/index.jade
+++ b/views/index.jade
@@ -527,16 +527,7 @@ block content
                            |  Acreditación y Apertura 
                    tr
                      td.agenda-time
-                       | 14:00 - 14:30 HS
-                     td.agenda-event.speaker
-                       .agenda-event
-                         h3 
-                           i.ion-ios-chatbubble
-                           |  Starting Point 
-                           span - Alejandro Motta
-                   tr
-                     td.agenda-time
-                       | 14:30 - 15:00 HS
+                       | 14:15 - 14:45 HS
                      td.agenda-event.speaker
                        .agenda-event
                          h3 
@@ -550,20 +541,38 @@ block content
                        .agenda-event
                          h3 
                            i.ion-ios-chatbubble
-                           |  Anyandgo MEAN Stack
-                           span - Cristian Cortez
+                           |  Reporte de vulnerabilidades en software libre 
+                           span - Gustavo Grieco
                    tr
                      td.agenda-time
-                       | 15:30 - 16:00 HS
+                       | 15:45 - 16:15 HS
                      td.agenda-event.speaker
                        .agenda-event
                          h3 
                            i.ion-ios-chatbubble
-                           |  Donweb CloudVPS
-                           span - Ezequiel Cardinali 
+                           |  CoudsVPS
+                           span - Ezequiel Cardinali
                    tr
                      td.agenda-time
                        | 16:30 - 17:00 HS
+                     td.agenda-event.speaker
+                       .agenda-event
+                         h3 
+                           i.ion-ios-chatbubble
+                           |  Anyandgo MEAN Stack
+                           span - Cristian Cortez 
+                   tr
+                     td.agenda-time
+                       | 17:15 - 17:45 HS
+                     td.agenda-event.speaker
+                       .agenda-event
+                         h3 
+                           i.ion-ios-chatbubble
+                           |  A token walks into a SPA...
+                           span - Martin Gontovnikas
+                   tr
+                     td.agenda-time
+                       | 18:00 - 18:30 HS
                      td.agenda-event.speaker
                        .agenda-event
                          h3 
