--- a/views/index.jade
+++ b/views/index.jade
@@ -308,7 +308,7 @@ block content
               li
                 a(href="https://twitter.com/lucasvandongen", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
-          li
+          //li
             img.img-circle.img-responsive.center-block(src="img/jurados/mfigge-foto.jpg")
             p.label-n Mario Figge
             p.label-brand Director · 3tristestigres 
@@ -532,8 +532,8 @@ block content
                        .agenda-event
                          h3 
                            i.ion-ios-chatbubble
-                           |  Principios de Usabilidad 
-                           span - Yanina Ibarra
+                           |  Cognitive Computing
+                           span - Gabriel Simona 
                    tr
                      td.agenda-time
                        | 15:00 - 15:30 HS
@@ -541,7 +541,7 @@ block content
                        .agenda-event
                          h3 
                            i.ion-ios-chatbubble
-                           |  Reporte de vulnerabilidades en software libre 
+                           |  Reportes de vulnerabilidades a proyectos de software libre 
                            span - Gustavo Grieco
                    tr
                      td.agenda-time
@@ -551,7 +551,7 @@ block content
                          h3 
                            i.ion-ios-chatbubble
                            |  CoudsVPS
-                           span - Ezequiel Cardinali
+                           span  - Ezequiel Cardinali
                    tr
                      td.agenda-time
                        | 16:30 - 17:00 HS
@@ -559,8 +559,8 @@ block content
                        .agenda-event
                          h3 
                            i.ion-ios-chatbubble
-                           |  Anyandgo MEAN Stack
-                           span - Cristian Cortez 
+                           |  Anyandgo.io MEAN Stack
+                           span  - Cristian Cortez 
                    tr
                      td.agenda-time
                        | 17:15 - 17:45 HS
@@ -569,7 +569,7 @@ block content
                          h3 
                            i.ion-ios-chatbubble
                            |  A token walks into a SPA...
-                           span - Martin Gontovnikas
+                           span  - Martin Gontovnikas
                    tr
                      td.agenda-time
                        | 18:00 - 18:30 HS
@@ -577,8 +577,8 @@ block content
                        .agenda-event
                          h3 
                            i.ion-ios-chatbubble
-                           |  La economía de las APIs en la era de la computación cognitiva
-                           span - Gabriel Simona 
+                           |  Principios de Usabilidad 
+                           span - Yanina Ibarra
                    tr
                      td.agenda-time
                        | 17:00 - 17:30 HS
