--- a/views/index.jade
+++ b/views/index.jade
@@ -423,14 +423,17 @@ block content
             a(href="http://www.kodear.net/", target="_blank")
               img(src="./auspiciantes/kodear.png")
           li
-            a(href="http://rosariosistemas.com/#inicio", target="_blank")
-              img(src="./auspiciantes/rs-logo.png")
-          li
             a(href="http://coding-trainer.jit.su/", target="_blank")
               img(src="./auspiciantes/coding-logo.jpg")
           li
+            a(href="http://rosariosistemas.com/#inicio", target="_blank")
+              img(src="./auspiciantes/rs-logo.png")
+          li
             a(href="http://www.interlinksrl.com.ar/", target="_blank")
               img(src="./auspiciantes/interlink.jpg")
+          li
+            a(href="https://www.codeschool.com/", target="_blank")
+              img(src="./auspiciantes/codeschool.png")
         h2 Institucionales
         ul.list-inline
           li
