Ajustes en la agenda

--- a/views/index.jade
+++ b/views/index.jade
@@ -517,7 +517,7 @@ block content
                  tbody
                    // Multiple events in a single day (note the rowspan)
                    tr
-                     td.agenda-date(rowspan='9')
+                     td.agenda-date(rowspan='8')
                        .dayofmonth 13
                        .dayofweek Viernes
                        .shortdate.text-muted Noviembre, 2015
@@ -553,7 +553,7 @@ block content
                        .agenda-event
                          h3 
                            i.ion-ios-chatbubble
-                           |  CoudsVPS
+                           |  Donweb CloudVPS
                            span  - Ezequiel Cardinali
                    tr
                      td.agenda-time
@@ -584,15 +584,7 @@ block content
                            span - Yanina Ibarra
                    tr
                      td.agenda-time
-                       | 17:00 - 17:30 HS
-                     td.agenda-event.speaker
-                       .agenda-event
-                         h3 
-                           i.ion-ios-chatbubble
-                           |  Presentación de los equipos
-                   tr
-                     td.agenda-time
-                       | 18:00 - 18:30 HS
+                       | 18:30 - 19:00 HS
                      td.agenda-event.speaker
                        .agenda-event
                          h3 
