--- a/views/index.jade
+++ b/views/index.jade
@@ -403,9 +403,6 @@ block content
             a(href="http://www.tecso.coop/", target="_blank")
               img(src="./auspiciantes/tecso.png")
           li
-            a(href="http://www.alphasocialmarketing.com/", target="_blank")
-              img(src="./auspiciantes/alpha.png")
-          li
             a(href="http://killabunnies.com.ar/", target="_blank")
               img(src="./auspiciantes/killabunnies.png")
         ul.list-inline
@@ -423,17 +420,21 @@ block content
               img(src="./auspiciantes/ibm.png")
         ul.list-inline
           li
+            a(href="http://www.alphasocialmarketing.com/", target="_blank")
+              img(src="./auspiciantes/alpha.png")
+          li
             a(href="http://www.kodear.net/", target="_blank")
               img(src="./auspiciantes/kodear.png")
-          li
-            a(href="http://coding-trainer.jit.su/", target="_blank")
-              img(src="./auspiciantes/coding-logo.jpg")
           li
             a(href="http://rosariosistemas.com/#inicio", target="_blank")
               img(src="./auspiciantes/rs-logo.png")
           li
             a(href="http://www.interlinksrl.com.ar/", target="_blank")
               img(src="./auspiciantes/interlink.jpg")
+        ul.list-inline
+          li
+            a(href="http://coding-trainer.jit.su/", target="_blank")
+              img(src="./auspiciantes/coding-logo.png")
         h2 Institucionales
         ul.list-inline
           li
