cambiando link de coding trainer

--- a/views/index.jade
+++ b/views/index.jade
@@ -433,7 +433,7 @@ block content
               img(src="./auspiciantes/interlink.jpg")
         ul.list-inline
           li
-            a(href="http://coding-trainer.jit.su/", target="_blank")
+            a(href="https://twitter.com/coding_trainer", target="_blank")
               img(src="./auspiciantes/coding-logo.png")
         h2 Institucionales
         ul.list-inline
