--- a/views/index.jade
+++ b/views/index.jade
@@ -354,7 +354,9 @@ block content
           li
             a(href="http://accelone.com/", target="_blank")
               img(src="./img/logos/a1.png")
-        h2 Auspiciantes
+        h2.hide Auspiciantes
+        p.text-center
+          span Buscamos auspiciantes para la Edición 2016
         p.text-center
           a.button(href="mailto:emprendevs@gmail.com?subject=Solicitud para auspiciar el evento", target="_blank") Auspiciar el Evento
         h2 Auspiciantes 2015
