--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  #particles-js
   .row
     .col-sm-8.col-sm-offset-2
       section.neck-step-1
@@ -699,7 +700,7 @@ block content
         p.sub-line.text-center
           | &#8226; Aprendé, construí y divertite &#8226;
         p.sub-line.text-center
-          a(href="https://docs.google.com/document/d/1ZEy6cX_3-LT4gJPxTU6_eT3JORd_tiulDJLi3h9dFHc/edit?usp=sharing", target="_blank") Bases y Condiciones de la Competencia
+          a(href="https://docs.google.com/document/d/1ZEy6cX_3-LT4gJPxTU6_eT3JORd_tiulDJLi3h9dFHc/edit?usp=sharing", target="_blank") Bases y Condiciones de la Hackathon
         p.text-center
           a.go-up(href="#")
             i.ion-arrow-up-b
