--- a/views/layout.jade
+++ b/views/layout.jade
@@ -80,6 +80,7 @@ html(lang='en',ng-app="anyandgoApp")
       include ./partials/modal-video
 
     script(src="https://www.youtube.com/iframe_api")
+    script(src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js")
     - if(settings.envflag !== "production") {
     //-<!-- build:js(public) scripts/site-vendors.min.js -->
     //bower:js
